# fastapi-website-blueprint

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .prettierignore  AGENTS.md  CHEATSHEET.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml
.devcontainer/: .dockerignore  .env.example  Dockerfile  Dockerfile.master  README.md  devcontainer.json  docker-compose.yml
.devcontainer/docker_files/: README.md
.devcontainer/docker_files/01_base/: Dockerfile  README.md
.devcontainer/docker_files/02_dev/: Dockerfile  README.md
.devcontainer/docker_files/03_agent/: Dockerfile  README.md
.devcontainer/docker_files/04_distribution/: Dockerfile  README.md
.githooks/: pre-push
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/rulesets/: protect-main.json
.github/workflows/: audit.yml  ci.yml  codeql.yml
docs/: CHEATSHEET.md  GITHUB_SETUP.md  QUICKSTART.md  README.md  TEST_AND_LINT.md
docs_for_human/: QUICKSTART.md  README.md
scripts/: audit  fix  lib.sh  lint  test
shared_folder/: .gitignore
src/app/: __init__.py  main.py
src/app/static/: index.html  not-found.html
src/app/static/css/: style.css  theme.css
src/app/static/js/: main.js  shout.js  theme-init.js  theme-switch.js
src/app/templates/: base.html  index.html  not-found.html
tests/: __init__.py  accessibility.py  conftest.py  test_api.py  test_e2e.py  test_node_version_consistency.py  test_security_headers.py  test_static_consistency.py
